# FindPackageLibraryTest

Logger-find-package-works/: CMakeLists.txt
Logger-find-package-works/include/Logger/core/: Logger.h
